# rustatsu-sync-server

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-bake.hcl  docker-compose.yaml
.github/workflows/: build.yaml  ci.yaml  test.yaml
.sqlx/: query-0075b25947152e5bbe423c7f8f84b9389803537cbfa3eaba7ef31a5c3e11ccec.json  query-041ba51856bb7a01247a602abe8f7a04eeb9946249cad1263a19ea7e5076f012.json  query-102ed80d748b772ee7907aa34064dd0ea3923ea7e8bf089335dd65960abe9979.json  query-11a50b19043dfcc4ededfe440924d83671eef325e10cac2ce536f94d2698ece1.json  query-14025c6898d19e313b75fb0b80f8fb301f8f7bc84172f13e50538b7e3f2045b6.json  query-1f407d137b7fe5b06b01d57f7aefe908dc8171b14da4cece4a4626793e42b442.json  query-2d9aa9b9e3bc21517e7bebb2a9c5974819964d07ae4c410da11a8a31c365cf4c.json  query-39c8ba62d04103f2d1b20dca9f7197290552c20323a524577474bfe7ec2a1695.json  query-3b624315aca3fa0d5dfd03a2d5732ef655f1cfeaa217625479e5ee376e44fce4.json  query-47f9f17f7427a7cef8a86b7d66b7a356c09aabab7280f3343e4671a10cb83229.json  query-5021b4c4ed241652cd0b65603f45cf158ce02fce18ad4080bc5f6f6a12f10882.json  query-52d045ab77dba54cdcba6e2dc349ad3ba7f7b3d387c5500a01cacbf7763b1e7d.json  query-5bba6aa73bc8454d0bb70481f82ffd7a531ff9d8f4defd1dc6908b1167cdae20.json  query-648eda0b2d80e283962018a3568e78bfb95c7cbc54f70b867da9db99e5be1cdc.json  query-67745116245b15db9cdd0ebd44c991a57ecda3ae283f847f208df2239ff29392.json  query-76070cc323773b69ccd788a7d01b30618d31c8618ab337ba7c79846d8e988a54.json  query-7cda817059442b7079d6b9269c67ce782035528e7522e2d1ca98f9e38ec65833.json  query-80948cc921a9a414ebbfe5f76a7e51ad3dc619f5edb4abf08b4002925f7418cb.json  query-886d0515c1cecc3911b535e924cbbf8c2e72a1c6b9b9e89ff7641f1e9be6e850.json  query-8f2b64ce85940415f689d9810cae03f378bbeb4796daf08fb00abb576e3a4106.json  query-9375aaa42606c8f0bcea585d92562e2ac785f2e69a471b5b1b1364feebc35759.json  query-95fa8b6f117ccfce856a21136454ddd582e05d823470f53e432b9ef3a3b5200f.json  query-972972035978061ea0b22a7f24e14bcdccbef9c0d1386452d9910b6b1d598c41.json  query-97e6d66a4579cf515b0318732ff317b325479d9596df3f54557d3fabe5381ce8.json  query-a60f4e4f4e3b190ff7d5907305233ab0febd313ad28a0102e92f583367079872.json  query-a6f744e232c8aa2ebd91c8e2b3456c635a55e930ebc580f1b1a8e1e661e1fda3.json  query-aadc3175ce5da3c8a35ac37e91e2d7089bd55208860466244f8b0bbf5574875b.json  query-ab77ff235f64ca52ba5d90974d16eb3a582d7b0114b19a990cf69c51c386c6f3.json  query-b72d87563b16cbe4b35dd2b6c1b2cc41171f0c376c991746d2f1a43bbf7a333b.json  query-b928937885cc637084645a19f45ace0489b2a1d6669784c3968deb57025d93e7.json  query-c03fe31ecff9d45051e4a6468c671eebb667259b79b4c756c77d19645b70d3de.json  query-c382cd7523a2a05348edae99582fdf364e02cc5c19125d974d8d73f42b787350.json  query-cb92be111b983465b6e3ab6d9feb3dbcf3ec2fb2e3e691e8c953dc8c97d9f84c.json  query-cc42f969747ea9ae89e2e2d8bef2a89a2546bd8ecf2c97eef8231e968e60d913.json  query-d0f19e822528a8ba81547065dd7e4eb8dfbc78b55a1f6c2f7fd7705a4cf8abae.json  query-d4a9c44a8e6a7cbb04355af3b4eb2980c9917a0c511c803b96c847aa5c9158a5.json  query-dccf676f0225ff2be2208f7c76e7f18b0dda44f3f23e84ce7db1b545d550676c.json  query-fc3f30d00c3b1b2a29db582a0b3042046a923a828672f28abd941840d410603b.json  query-fd349949daaa87df98108c39155e10d0b595537fb45cea19c91f6e6c232a8913.json
configuration/: base.yaml  local.yaml
migrations/: 20240720101247_create_users_table.sql  20240720101726_create_manga_table.sql  20240720101729_create_tags_table.sql  20240720101738_create_manga_tags_table.sql  20240720101744_create_history_table.sql  20240720101750_create_categories_table.sql  20240720101756_create_favorites_table.sql  20250228222328_create_users_table.up.sql  20250228222344_create_mangas_table.down.sql  20250228222344_create_mangas_table.up.sql  20250228222350_create_tags_table.up.sql  20250228222354_create_manga_tags_table.down.sql  20250228222354_create_manga_tags_table.up.sql  20250228222410_create_history_table.down.sql  20250228222410_create_history_table.up.sql  20250228222417_create_categories_table.down.sql  20250228222417_create_categories_table.up.sql  20250228222432_create_favourites_table.down.sql  20250228222432_create_favourites_table.up.sql
src/: config.rs  configuration.rs  error.rs  lib.rs  main.rs  model.rs  routes.rs  startup.rs  state.rs  telemetry.rs  util.rs
src/auth/: error.rs  jwt.rs  mod.rs  password.rs
src/authorization/: middleware.rs  mod.rs  (+2 more)
tests/: fake.rs  helper.rs  main.rs
(+39 files in other folders)
