[package]
name = "rustatsu-sync"
version = "0.1.0"
edition = "2021"
authors = ["Muhammad Abdusy Syukur <hi@abdusy.dev>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rustatsu-sync"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["http2", "macros"] }
chrono = "0.4.38"
figment = { version = "0.10.19", features = ["yaml", "env"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.120"
sqlx = { version = "0.7.4", features = [
    "runtime-tokio-rustls",
    "macros",
    "mysql",
    "uuid",
    "chrono",
    "migrate",
] }
tokio = { version = "1.38.1", features = ["full", "macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "registry",
    "env-filter",
    "json",
] }
uuid = { version = "1.10.0", features = ["v4"] }

[dev-dependencies]
reqwest = { version = "0.12.5", features = ["json", "rustls-tls", "cookies"] }
