[package]
name = "rustatsu-sync"
version = "0.1.3"
edition = "2024"
authors = ["Muhammad Abdusy Syukur <hi@abdusy.dev>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rustatsu-sync"

[dependencies]
anyhow = "1.0.86"
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.8.1", features = ["http2", "macros"] }
axum_thiserror = "0.1.0"
chrono = "0.4.38"
figment = { version = "0.10.19", features = ["yaml", "env"] }
jsonwebtoken = "9.3.0"
rand = "0.9.0"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.120"
sqlx = { version = "0.8.2", features = [
  "runtime-tokio-rustls",
  "macros",
  "mysql",
  "uuid",
  "chrono",
  "migrate",
] }
thiserror = "2.0.5"
tokio = { version = "1.38.1", features = ["full", "macros", "rt-multi-thread"] }
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["compression-full", "trace"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
  "registry",
  "env-filter",
  "json",
] }
uuid = { version = "1.10.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
reqwest = { version = "0.12.5", features = ["json", "rustls-tls", "cookies"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
