[package]
name = "rustatsu-sync"
version = "1.0.6"
edition = "2024"
authors = ["Muhammad Abdusy Syukur <hi@abdusy.dev>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rustatsu-sync"

[dependencies]
anyhow = "1.0.97"
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.8.3", features = ["http2", "macros"] }
chrono = "0.4.40"
figment = { version = "0.10.19", features = ["yaml", "env"] }
futures = "0.3.31"
jsonwebtoken = "9.3.1"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = "4.6.0"
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = [
  "runtime-tokio",
  "tls-rustls",
  "macros",
  "postgres",
  "chrono",
  "migrate",
] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full", "macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = [
  "compression-full",
  "trace",
  "request-id",
] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-panic = "0.1.2"
tracing-subscriber = { version = "0.3.19", features = [
  "registry",
  "env-filter",
  "json",
] }
uuid = { version = "1.16.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
rand = "0.9.1"
http-body-util = "0.1.3"
reqwest = { version = "0.12.5", features = ["json", "rustls-tls", "cookies"] }
fake = { version = "4.3.0", features = [
  "chrono",
  "email_address",
  "time",
  "url",
] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true
